bug squashing

--- a/chainforge/react-server/src/text-fields-node.css
+++ b/chainforge/react-server/src/text-fields-node.css
@@ -113,7 +113,7 @@
     border-radius: 4px;
     padding: 8px;
     overflow-y: auto;
-    max-height: 175px;
+    max-height: 205px;
   }
   .llm-list-backdrop {
     margin: 6px 0px 6px 6px;
